# asana-goals-jira-sync

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  asana_api.py  jira_api.py  sync_manager.py
